src/objects/Instituto__c.object
<CustomObject>
    <fields>
        <fullName>Calle__c</fullName>
        <label>Calle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoPostal__c</fullName>
        <label>Código postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonia__c</fullName>
        <label>Colonia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encabezado__c</fullName>
        <label>Encabezado</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estado</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ubicacion__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Estado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Institutos (Estado)</relationshipLabel>
        <relationshipName>Institutos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IdInterno__c</fullName>
        <externalId>true</externalId>
        <label>Id Interno</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ubicacion__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Municipio</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Institutos</relationshipLabel>
        <relationshipName>Institutos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumeroExterior__c</fullName>
        <label>Número exterior</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroInterior__c</fullName>
        <label>Número interior</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>País</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ubicacion__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pais</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Institutos (País)</relationshipLabel>
        <relationshipName>Institutos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFC__c</fullName>
        <label>RFC</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Web__c</fullName>
        <label>Web</label>
        <type>Url</type>
    </fields>
    <label>Instituto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IdInterno__c</columns>
        <columns>NAME</columns>
        <columns>Encabezado__c</columns>
        <columns>Colonia__c</columns>
        <columns>Estado__c</columns>
        <columns>Municipio__c</columns>
        <columns>Pais__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Instituto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Institutos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>